Atualização da página do departamento moda

--- a/index.html
+++ b/index.html
@@ -3353,14 +3353,14 @@
   </div>
 </div>
 
-<div class="produto-card" data-subcategoria="Roupas Fitness" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_951420-MLB94270396017_102025-F-calca-jeans-feminina-flare-cintura-alta-com-lycra-grafite.webp" alt="Calça Jeans Feminina Flare Cintura Alta Com Lycra Grafite">
+<div class="produto-card" data-subcategoria="Óculos e Acessórios" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_847192-MLA96074616853_102025-F.webp" alt="Relógio Prateado Feminino Saint Germain Harlem Silver 32mm Fundo Branco">
   <div class="produto-info">
-    <h3>Calça Jeans Feminina Flare Cintura Alta Com Lycra Grafite</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 129.90</span></p>
-    <p class="preco">R$ 75.60</p>
-    <p class="text-success">Economize R$54.30!</p>
-    <a href="https://mercadolivre.com/sec/2ehnaqq" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Relógio Prateado Feminino Saint Germain Harlem Silver 32mm Fundo Branco</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 269.90</span></p>
+    <p class="preco">R$ 124.83</p>
+    <p class="text-success">Economize R$145.07!</p>
+    <a href="https://mercadolivre.com/sec/2Fzjpru" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -3397,25 +3397,14 @@
   </div>
 </div>
 
-<div class="produto-card" data-subcategoria="Roupas Fitness" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_965013-MLB86293986380_062025-F-calca-feminina-alfaiataria-wide-leg-social-elegante-8-cores.webp" alt="Calça Feminina Alfaiataria Wide Leg Social Elegante 8 Cores">
+<div class="produto-card" data-subcategoria="Óculos e Acessórios" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_956036-MLA96110807839_102025-F.webp" alt="Relógio de pulso Casio Vintage A159 com corpo prateado, digital, para sem gênero, fundo preto, com correia de aço inoxidável cor prateado, subdials de cor preto, ponteiro de minutos/segundos preto, bi">
   <div class="produto-info">
-    <h3>Calça Feminina Alfaiataria Wide Leg Social Elegante 8 Cores</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 49.90</span></p>
-    <p class="preco">R$ 28.56</p>
-    <p class="text-success">Economize R$21.34!</p>
-    <a href="https://mercadolivre.com/sec/225mWDf" class="btn-comprar" target="_blank">Comprar Agora</a>
-  </div>
-</div>
-
-<div class="produto-card" data-subcategoria="Roupas Fitness" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_704364-MLB95518323176_102025-F-calca-legging-com-bolso-lateral-fitness-feminino-atletyca.webp" alt="Calça Legging Com Bolso Lateral Fitness Feminino Atletyca">
-  <div class="produto-info">
-    <h3>Calça Legging Com Bolso Lateral Fitness Feminino Atletyca</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 64.90</span></p>
-    <p class="preco">R$ 38.31</p>
-    <p class="text-success">Economize R$26.59!</p>
-    <a href="https://mercadolivre.com/sec/2z3Gpd7" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Relógio de pulso Casio Vintage A159 com corpo prateado, digital, para sem gênero, fundo preto, com correia de aço inoxidável cor prateado, subdials de cor preto, ponteiro de minutos/segundos preto, bi</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 276.67</span></p>
+    <p class="preco">R$ 189.00</p>
+    <p class="text-success">Economize R$87.67!</p>
+    <a href="https://mercadolivre.com/sec/2ypuqeQ" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -3438,6 +3427,28 @@
     <p class="preco">R$ 139.96</p>
     <p class="text-success">Economize R$95.79!</p>
     <a href="https://mercadolivre.com/sec/1W1GkqP" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria="Roupas Fitness" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_838394-MLB95506707550_102025-F-calca-wide-leg-feminina-pantalona-cintura-alta-jeans.webp" alt="Calça Wide Leg Feminina Pantalona Cintura Alta Jeans">
+  <div class="produto-info">
+    <h3>Calça Wide Leg Feminina Pantalona Cintura Alta Jeans</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 99.99</span></p>
+    <p class="preco">R$ 53.57</p>
+    <p class="text-success">Economize R$46.42!</p>
+    <a href="https://mercadolivre.com/sec/1ZENuYQ" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria="Roupas Fitness" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_965013-MLB86293986380_062025-F-calca-feminina-alfaiataria-wide-leg-social-elegante-8-cores.webp" alt="Calça Feminina Alfaiataria Wide Leg Social Elegante 8 Cores">
+  <div class="produto-info">
+    <h3>Calça Feminina Alfaiataria Wide Leg Social Elegante 8 Cores</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 49.90</span></p>
+    <p class="preco">R$ 28.56</p>
+    <p class="text-success">Economize R$21.34!</p>
+    <a href="https://mercadolivre.com/sec/225mWDf" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -3490,9 +3501,42 @@
   <div class="produto-info">
     <h3>Kit 2 Top Academia Puma Treino Fitness Esportivo Algodão</h3>
     <p class="preco-antigo"><span class="preco-antigo">De R$ 127.39</span></p>
-    <p class="preco">R$ 75.99</p>
-    <p class="text-success">Economize R$51.40!</p>
+    <p class="preco">R$ 77.99</p>
+    <p class="text-success">Economize R$49.40!</p>
     <a href="https://mercadolivre.com/sec/1KSbFmK" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria="Roupas Fitness" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_704364-MLB95518323176_102025-F-calca-legging-com-bolso-lateral-fitness-feminino-atletyca.webp" alt="Calça Legging Com Bolso Lateral Fitness Feminino Atletyca">
+  <div class="produto-info">
+    <h3>Calça Legging Com Bolso Lateral Fitness Feminino Atletyca</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 64.90</span></p>
+    <p class="preco">R$ 38.31</p>
+    <p class="text-success">Economize R$26.59!</p>
+    <a href="https://mercadolivre.com/sec/2z3Gpd7" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria="Calçados Esportivos" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_889791-MLB89556152911_082025-F-tnis-softride-symmetry-fuzion-puma.webp" alt="Tênis Softride Symmetry Fuzion Puma">
+  <div class="produto-info">
+    <h3>Tênis Softride Symmetry Fuzion Puma</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 399.99</span></p>
+    <p class="preco">R$ 218.49</p>
+    <p class="text-success">Economize R$181.50!</p>
+    <a href="https://mercadolivre.com/sec/1CHXMKP" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria="Roupas Masculinas" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_627606-MLB81364866488_122024-F-camisa-social-feminina-listrada-manga-longa-tendncia.webp" alt="Camisa Social Feminina Listrada Manga Longa Tendência">
+  <div class="produto-info">
+    <h3>Camisa Social Feminina Listrada Manga Longa Tendência</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 78.00</span></p>
+    <p class="preco">R$ 53.82</p>
+    <p class="text-success">Economize R$24.18!</p>
+    <a href="https://mercadolivre.com/sec/1rE4SxK" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -3504,39 +3548,6 @@
     <p class="preco">R$ 118.65</p>
     <p class="text-success">Economize R$31.25!</p>
     <a href="https://mercadolivre.com/sec/1PBcs3k" class="btn-comprar" target="_blank">Comprar Agora</a>
-  </div>
-</div>
-
-<div class="produto-card" data-subcategoria="Roupas Fitness" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_838394-MLB95506707550_102025-F-calca-wide-leg-feminina-pantalona-cintura-alta-jeans.webp" alt="Calça Wide Leg Feminina Pantalona Cintura Alta Jeans">
-  <div class="produto-info">
-    <h3>Calça Wide Leg Feminina Pantalona Cintura Alta Jeans</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 99.99</span></p>
-    <p class="preco">R$ 53.57</p>
-    <p class="text-success">Economize R$46.42!</p>
-    <a href="https://mercadolivre.com/sec/1ZENuYQ" class="btn-comprar" target="_blank">Comprar Agora</a>
-  </div>
-</div>
-
-<div class="produto-card" data-subcategoria="Outros" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_970054-MLB74702830155_022024-F-kit-com-10-pares-de-meia-soquete-adulto-lupo-sport.webp" alt="Kit Com 10 Pares De Meia Soquete Adulto Lupo Sport">
-  <div class="produto-info">
-    <h3>Kit Com 10 Pares De Meia Soquete Adulto Lupo Sport</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 114.90</span></p>
-    <p class="preco">R$ 58.80</p>
-    <p class="text-success">Economize R$56.10!</p>
-    <a href="https://mercadolivre.com/sec/1Jw9aaN" class="btn-comprar" target="_blank">Comprar Agora</a>
-  </div>
-</div>
-
-<div class="produto-card" data-subcategoria="Notebooks e Informática" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_681321-MLB81603434831_122024-F-mochila-viagem-feminina-masculina-para-notebook-executiva.webp" alt="Mochila Viagem Feminina Masculina Para Notebook Executiva">
-  <div class="produto-info">
-    <h3>Mochila Viagem Feminina Masculina Para Notebook Executiva</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 249.98</span></p>
-    <p class="preco">R$ 139.98</p>
-    <p class="text-success">Economize R$110.00!</p>
-    <a href="https://mercadolivre.com/sec/23pc8Mq" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -3578,8 +3589,8 @@
   <div class="produto-info">
     <h3>Tênis Casual Masculino E Feminino Up Puma</h3>
     <p class="preco-antigo"><span class="preco-antigo">De R$ 299.99</span></p>
-    <p class="preco">R$ 269.90</p>
-    <p class="text-success">Economize R$30.09!</p>
+    <p class="preco">R$ 209.99</p>
+    <p class="text-success">Economize R$90.00!</p>
     <a href="https://mercadolivre.com/sec/2iQU8iv" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
@@ -3622,8 +3633,8 @@
   <div class="produto-info">
     <h3>Mochila Viagem Impermeavel Executiva Grande Para Notebook</h3>
     <p class="preco-antigo"><span class="preco-antigo">De R$ 214.27</span></p>
-    <p class="preco">R$ 139.98</p>
-    <p class="text-success">Economize R$74.29!</p>
+    <p class="preco">R$ 149.99</p>
+    <p class="text-success">Economize R$64.28!</p>
     <a href="https://mercadolivre.com/sec/1QtJRGE" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
@@ -3698,10 +3709,21 @@
   <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904414-MLB86597490212_062025-F-vestido-longo-feminino-casual-lastex-alcinha-fenda-barato.webp" alt="Vestido Longo Feminino Casual Lastex Alcinha Fenda Barato">
   <div class="produto-info">
     <h3>Vestido Longo Feminino Casual Lastex Alcinha Fenda Barato</h3>
-    <p class="preco-antigo"></p>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 82.87</span></p>
     <p class="preco">R$ 46.41</p>
-    
+    <p class="text-success">Economize R$36.46!</p>
     <a href="https://mercadolivre.com/sec/2XDYgyF" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria="Óculos e Acessórios" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_980675-MLA96141493625_102025-F.webp" alt="Relógio Technos Masculino Skymaster Prata - 6p29alx/1p Bisel Preto">
+  <div class="produto-info">
+    <h3>Relógio Technos Masculino Skymaster Prata - 6p29alx/1p Bisel Preto</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 619.00</span></p>
+    <p class="preco">R$ 359.10</p>
+    <p class="text-success">Economize R$259.90!</p>
+    <a href="https://mercadolivre.com/sec/1DKZvoK" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -3831,8 +3853,8 @@
   <div class="produto-info">
     <h3>Chinelo Havaianas Masculino Top Max Comfort Anatômica Macia</h3>
     <p class="preco-antigo"><span class="preco-antigo">De R$ 78.99</span></p>
-    <p class="preco">R$ 50.92</p>
-    <p class="text-success">Economize R$28.07!</p>
+    <p class="preco">R$ 48.37</p>
+    <p class="text-success">Economize R$30.62!</p>
     <a href="https://mercadolivre.com/sec/1jynxbW" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
@@ -3875,8 +3897,8 @@
   <div class="produto-info">
     <h3>Kit 4 Camiseta Dry-fit Sandrini Masculina Academia Caminhada</h3>
     <p class="preco-antigo"><span class="preco-antigo">De R$ 135.41</span></p>
-    <p class="preco">R$ 73.51</p>
-    <p class="text-success">Economize R$61.90!</p>
+    <p class="preco">R$ 59.99</p>
+    <p class="text-success">Economize R$75.42!</p>
     <a href="https://mercadolivre.com/sec/1mntWth" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
@@ -3893,35 +3915,13 @@
 </div>
 
 <div class="produto-card" data-subcategoria="Roupas Masculinas" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_667287-MLB96659279606_112025-F-camisa-gola-polo-masculina-premium.webp" alt="Camisa Gola Polo Masculina Premium">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_759986-MLB96660595452_112025-F-camisa-gola-polo-masculina-premium.webp" alt="Camisa Gola Polo Masculina Premium">
   <div class="produto-info">
     <h3>Camisa Gola Polo Masculina Premium</h3>
     <p class="preco-antigo"><span class="preco-antigo">De R$ 55.67</span></p>
     <p class="preco">R$ 34.55</p>
     <p class="text-success">Economize R$21.12!</p>
     <a href="https://mercadolivre.com/sec/1CUuWc6" class="btn-comprar" target="_blank">Comprar Agora</a>
-  </div>
-</div>
-
-<div class="produto-card" data-subcategoria="Calçados" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_788864-MLB79105601045_092024-F-sandalia-feminina-salto-baixo-bloco-enfeite-metalizado.webp" alt="Sandália Feminina Salto Baixo Bloco Enfeite Metalizado">
-  <div class="produto-info">
-    <h3>Sandália Feminina Salto Baixo Bloco Enfeite Metalizado</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 100.99</span></p>
-    <p class="preco">R$ 67.90</p>
-    <p class="text-success">Economize R$33.09!</p>
-    <a href="https://mercadolivre.com/sec/2tFvirm" class="btn-comprar" target="_blank">Comprar Agora</a>
-  </div>
-</div>
-
-<div class="produto-card" data-subcategoria="Outros" data-departamento="Moda e Acessórios" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_765079-MLB87929969346_072025-F-polo-masculina-lacoste-slim-fit-original.webp" alt="Polo Masculina Lacoste Slim Fit - Original">
-  <div class="produto-info">
-    <h3>Polo Masculina Lacoste Slim Fit - Original</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 499.90</span></p>
-    <p class="preco">R$ 267.99</p>
-    <p class="text-success">Economize R$231.91!</p>
-    <a href="https://mercadolivre.com/sec/2neZJQE" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
