Atualização da página do departamento beleza

--- a/index.html
+++ b/index.html
@@ -369,36 +369,36 @@
 
 <section class="produto-grid" id="produtos">
   
-<div class="produto-card" data-subcategoria="Outros" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_935634-MLA96119169607_102025-F.webp" alt="Máscara Wella Fusion Reconstrutora 500ml Cabelo Forte e Revitalizado">
+<div class="produto-card" data-subcategoria="Perfumes" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_846012-MLA87002997659_062025-F.webp" alt="Perfume Lattafa Asad 100ml Eau De Parfum Original Árabe Original - Selo Original Lataffa Melhores Perfumes Masculino Ref Importada">
   <div class="produto-info">
-    <h3>Máscara Wella Fusion Reconstrutora 500ml Cabelo Forte e Revitalizado</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 471.90</span></p>
-    <p class="preco">R$ 238.90</p>
-    <p class="text-success">Economize R$233.00!</p>
-    <a href="https://mercadolivre.com/sec/11opoFD" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Perfume Lattafa Asad 100ml Eau De Parfum Original Árabe Original - Selo Original Lataffa Melhores Perfumes Masculino Ref Importada</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 299.00</span></p>
+    <p class="preco">R$ 193.03</p>
+    <p class="text-success">Economize R$105.97!</p>
+    <a href="https://mercadolivre.com/sec/2MYJbn7" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
-<div class="produto-card" data-subcategoria="Outros" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_825140-MLB92309588790_092025-F.webp" alt="La Victorie Intense Eudora Eau De Parfum 75ml + Creme Acetinado 250g">
+<div class="produto-card" data-subcategoria="Perfumes" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_936397-MLA86750350308_072025-F.webp" alt="Perfume Lattafa Asad Zanzibar Limited 100ml">
   <div class="produto-info">
-    <h3>La Victorie Intense Eudora Eau De Parfum 75ml + Creme Acetinado 250g</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 359.90</span></p>
-    <p class="preco">R$ 259.13</p>
-    <p class="text-success">Economize R$100.77!</p>
-    <a href="https://mercadolivre.com/sec/1CNUTNY" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Perfume Lattafa Asad Zanzibar Limited 100ml</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 210.00</span></p>
+    <p class="preco">R$ 173.00</p>
+    <p class="text-success">Economize R$37.00!</p>
+    <a href="https://mercadolivre.com/sec/2VRwRhE" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
-<div class="produto-card" data-subcategoria="Outros" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_707950-MLA95712431578_102025-F.webp" alt="Aparador De Pelos Philips Oneblade Qp1424/10, Preto">
+<div class="produto-card" data-subcategoria="Perfumes" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_939914-MLA82579449104_032025-F.webp" alt="Kit Lattafa Asad Lattafa + Zanzibar Edição Especial Perfume Árabe EPD Masculino 100ML + 100ML">
   <div class="produto-info">
-    <h3>Aparador De Pelos Philips Oneblade Qp1424/10, Preto</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 226.53</span></p>
-    <p class="preco">R$ 129.00</p>
-    <p class="text-success">Economize R$97.53!</p>
-    <a href="https://mercadolivre.com/sec/2zR7B2S" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Kit Lattafa Asad Lattafa + Zanzibar Edição Especial Perfume Árabe EPD Masculino 100ML + 100ML</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 266.00</span></p>
+    <p class="preco">R$ 589.00</p>
+    <p class="text-success">Economize R$-323.00!</p>
+    <a href="https://mercadolivre.com/sec/2em1C6e" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
